Refactor README; update build instructions